# MacShuttle

./: .gitignore  README.md  check_shuttle.py  mac_shuttle.py  pyproject.toml  shuttle_controller_app.py  shuttle_controller_cli.py  shuttle_controller_v1.py  shuttle_diag.py
native_version/: .gitignore  Info.plist  Package.swift  build_app.sh  run_native.sh
native_version/Sources/MacShuttleSwift/: AppController.swift  Config.swift  InputController.swift  SettingsView.swift  ShuttleDevice.swift  main.swift
native_version/assets/: AppIcon.icns
python_version/: .gitignore  pyproject.toml  shuttle_config.json.bak  shuttle_config.json.old  shuttle_controller_app_v1.py  shuttle_controller_menu.py
