[project]
name = "mac-shuttle"
version = "0.1.0"
description = "A native-feeling driver for Contour ShuttlePro v2 on macOS with RDP support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "hidapi>=0.14.0",
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "pyobjc-framework-Cocoa>=10.0"
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# 安裝後可直接在終端機輸入 mac-shuttle 啟動
mac-shuttle = "mac_shuttle:main"
